...

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/RadioXieZhiLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/XieZhiLong"/>

    </RadioGroup>

    <Button
        android:id="@+id/C3_Send_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Temp_UI_C3"
        app:layout_constraintBottom_toTopOf="@+id/DataName_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SeniorRadioGroup" />

    <EditText
        android:id="@+id/DataName_Text"
...
